# archive-of-your-own

./: .gitignore  README.md  project.yml
ArchiveOfYourOwn/App/: ArchiveApp.swift  ContentView.swift
ArchiveOfYourOwn/Components/: ChapterRowView.swift  ChipView.swift  ContentBlockView.swift  NetworkLoadingView.swift  PressStyles.swift  ProgressTrackView.swift  ResumeCardView.swift  SearchFieldView.swift  SectionHeaderView.swift  SegmentedControlView.swift  ToggleRowView.swift  WorkCardView.swift
ArchiveOfYourOwn/Models/: ContentBlock.swift  Rating.swift
ArchiveOfYourOwn/Resources/: Info.plist
ArchiveOfYourOwn/Screens/Auth/: DatabaseSetupScreen.swift  TorConnectingScreen.swift
ArchiveOfYourOwn/Screens/Browse/: AuthorWorksView.swift  BrowseView.swift
ArchiveOfYourOwn/Screens/Reader/: ReaderView.swift
ArchiveOfYourOwn/Screens/Search/: SearchView.swift
ArchiveOfYourOwn/Screens/Settings/: AO3LoginSheet.swift  AccountManagementView.swift  (+1 more)
ArchiveOfYourOwn/State/: AppState.swift  CloudflareResolver.swift  NavigationState.swift  NetworkTask.swift  RecoveryKey.swift  RustBridge.swift  TTSController.swift
ArchiveOfYourOwn/Theme/: AppTheme.swift  BackgroundImageManager.swift  ColorHex.swift  DesignConstants.swift  NumberFormatting.swift
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: api.rs  client.rs  epub.rs  error.rs  lib.rs  models.rs  parser.rs  storage.rs
core/tests/fixtures/: comments.html  search_form.html  search_results.html  work_multi_chapter.html  work_multi_full.html  work_page.html
scripts/: build-rust.sh  take-screenshots.sh
(+73 files in other folders)
