[package]
name = "ao3-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ao3_core"
crate-type = ["lib", "staticlib"]

[features]
default = []
tor = ["arti-client", "tor-rtcompat", "tor-linkspec", "tor-netdir", "tor-dirmgr", "tor-geoip"]

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }
scraper = "0.22"
ego-tree = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "socks", "cookies", "http2", "gzip", "brotli", "zstd", "deflate"] }
rusqlite = { version = "0.36", features = ["bundled-sqlcipher"] }

# Tor (optional — heavy deps, only for release builds)
arti-client = { version = "0.42", optional = true, default-features = false, features = ["tokio", "rustls", "geoip", "experimental-api"] }
tor-geoip = { version = "0.42", optional = true }
tor-rtcompat = { version = "0.42", optional = true, features = ["tokio"] }
tor-linkspec = { version = "0.42", optional = true }
tor-netdir = { version = "0.42", optional = true, features = ["geoip"] }
tor-dirmgr = { version = "0.42", optional = true }

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
